NetBSD Problem Report #54860

From www@netbsd.org  Tue Jan 14 18:46:35 2020
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 4D3737A18A
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 14 Jan 2020 18:46:35 +0000 (UTC)
Message-Id: <20200114184634.726207A1E7@mollari.NetBSD.org>
Date: Tue, 14 Jan 2020 18:46:34 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/pci/if_ixl.c:6393: bad expression 
X-Send-Pr-Version: www-1.0

>Number:         54860
>Category:       kern
>Synopsis:       src/sys/dev/pci/if_ixl.c:6393: bad expression
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jan 14 18:50:00 +0000 2020
>Closed-Date:    Fri Jan 17 09:19:33 +0000 2020
>Last-Modified:  Fri Jan 17 09:19:33 +0000 2020
>Originator:     David Binderman
>Release:        cvs-20200114
>Organization:
>Environment:
>Description:
src/sys/dev/pci/if_ixl.c:6393:17: warning: Logical disjunction always evaluates to true: val > 100 || val < 180000. [incorrectLogicOperator]

Source code is

        if (100 < val || val < 180000) {
            ixl_param_stats_interval = val;

Maybe better code:

        if (100 < val && val < 180000) {
            ixl_param_stats_interval = val;

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Shoichi YAMAGUCHI" <yamaguchi@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54860 CVS commit: src/sys/dev/pci
Date: Fri, 17 Jan 2020 09:04:04 +0000

 Module Name:	src
 Committed By:	yamaguchi
 Date:		Fri Jan 17 09:04:04 UTC 2020

 Modified Files:
 	src/sys/dev/pci: if_ixl.c

 Log Message:
 Fix the wrong expression in ixl(4)

 Closes PR/54860.


 To generate a diff of this commit:
 cvs rdiff -u -r1.23 -r1.24 src/sys/dev/pci/if_ixl.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: yamaguchi@NetBSD.org
State-Changed-When: Fri, 17 Jan 2020 09:19:33 +0000
State-Changed-Why:
Fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.