Fix the wrong expression in ixl(4)

Closes PR/54860.